tests/snapshots/snapshots__budget_tomli_src_tomli_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4046 tokens)

__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
     8→from ._parser import TOMLDecodeError, load, loads

_parser.py
     7→import sys
     8→from types import MappingProxyType
    10→from ._re import (
    11→    RE_DATETIME,
    12→    RE_LOCALTIME,
    13→    RE_NUMBER,
    14→    match_to_datetime,
    15→    match_to_localtime,
    16→    match_to_number,
    17→)
    19→TYPE_CHECKING = False
    21→    from collections.abc import Iterable
    22→    from typing import IO, Any, Final
    24→    from ._types import Key, ParseFloat, Pos
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
    30→# https://mypyc.readthedocs.io/en/latest/differences_from_python.html#stack-overflows
    31→# Before mypyc's fix is in, recursion needs to be limited by this library.
    32→# Choosing `sys.getrecursionlimit()` as maximum inline table/array nesting
    33→# level, as it allows more nesting than pure Python, but still seems a far
    34→# lower number than where mypyc binaries crash.
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    52→    "abcdefghijklmnopqrstuvwxyz" "ABCDEFGHIJKLMNOPQRSTUVWXYZ" "0123456789" "-_"
    53→)
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    58→    {
    59→        "\\b": "\u0008",  # backspace
    60→        "\\t": "\u0009",  # tab
    61→        "\\n": "\u000a",  # linefeed
    62→        "\\f": "\u000c",  # form feed
    63→        "\\r": "\u000d",  # carriage return
    64→        "\\e": "\u001b",  # escape
    65→        '\\"': "\u0022",  # quote
    66→        "\\\\": "\u005c",  # backslash
    67→    }
    68→)
    71→class DEPRECATED_DEFAULT:
    72→    """Sentinel to be used as default arg during deprecation
    73→    period of TOMLDecodeError's free-form arguments."""
    76→class TOMLDecodeError(ValueError):
    77→    """An error raised if a document is not valid TOML.
    78→
    79→    Adds the following attributes to ValueError:
    80→    msg: The unformatted error message
    81→    doc: The TOML document being parsed
    82→    pos: The index of doc where parsing failed
    83→    lineno: The line corresponding to pos
    84→    colno: The column corresponding to pos
    85→    """
    86→
    87→    def __init__(
    88→        self,
    89→        msg: str | type[DEPRECATED_DEFAULT] = DEPRECATED_DEFAULT,
    90→        doc: str | type[DEPRECATED_DEFAULT] = DEPRECATED_DEFAULT,
    91→        pos: Pos | type[DEPRECATED_DEFAULT] = DEPRECATED_DEFAULT,
    92→        *args: Any,
    93→    ):
    94→        if (
      →        …
   137→def load(__fp: IO[bytes], *, parse_float: ParseFloat = float) -> dict[str, Any]:
   138→    """Parse TOML from a binary file object."""
   139→    b = __fp.read()
      →    …
   149→def loads(__s: str, *, parse_float: ParseFloat = float) -> dict[str, Any]:
   150→    """Parse TOML from a string."""
   151→
      →…
   220→class Flags:
   221→    """Flags that map to parsed keys/namespaces."""
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   225→    # Marks a nest that has been explicitly created and can no longer
   226→    # be opened using the "[table]" syntax.
   227→    EXPLICIT_NEST: Final = 1
   228→
   229→    def __init__(self) -> None:
   230→        self._flags: dict[str, dict[Any, Any]] = {}
      →        …
   233→    def add_pending(self, key: Key, flag: int) -> None:
   234→        self._pending_flags.add((key, flag))
   236→    def finalize_pending(self) -> None:
   237→        for key, flag in self._pending_flags:
      →        …
   241→    def unset_all(self, key: Key) -> None:
   242→        cont = self._flags
      →        …
   249→    def set(self, key: Key, flag: int, *, recursive: bool) -> None:  # noqa: A003
   250→        cont = self._flags
      →        …
   260→    def is_(self, key: Key, flag: int) -> bool:
   261→        if not key:
      →        …
   278→class NestedDict:
   279→    def __init__(self) -> None:
   280→        # The parsed content of the TOML document
      →        …
   283→    def get_or_create_nest(
   284→        self,
   285→        key: Key,
   286→        *,
   287→        access_lists: bool = True,
   288→    ) -> dict[str, Any]:
   289→        cont: Any = self.dict
      →        …
   300→    def append_nest_to_list(self, key: Key) -> None:
   301→        cont = self.get_or_create_nest(key[:-1])
      →        …
   312→class Output:
   313→    def __init__(self) -> None:
   314→        self.data = NestedDict()
      →        …
   318→def skip_chars(src: str, pos: Pos, chars: Iterable[str]) -> Pos:
   319→    try:
      →    …
   327→def skip_until(
   328→    src: str,
   329→    pos: Pos,
   330→    expect: str,
   331→    *,
   332→    error_on: frozenset[str],
   333→    error_on_eof: bool,
   334→) -> Pos:
   335→    try:
      →    …
   349→def skip_comment(src: str, pos: Pos) -> Pos:
   350→    try:
      →    …
   361→def skip_comments_and_array_ws(src: str, pos: Pos) -> Pos:
   362→    while True:
      →    …
   370→def create_dict_rule(src: str, pos: Pos, out: Output) -> tuple[Pos, Key]:
   371→    pos += 1  # Skip "["
      →    …
   390→def create_list_rule(src: str, pos: Pos, out: Output) -> tuple[Pos, Key]:
   391→    pos += 2  # Skip "[["
      →    …
   413→def key_value_rule(
   414→    src: str, pos: Pos, out: Output, header: Key, parse_float: ParseFloat
   415→) -> Pos:
   416→    pos, key, value = parse_key_value_pair(src, pos, parse_float, nest_lvl=0)
      →    …
   447→def parse_key_value_pair(
   448→    src: str, pos: Pos, parse_float: ParseFloat, nest_lvl: int
   449→) -> tuple[Pos, Key, Any]:
   450→    pos, key = parse_key(src, pos)
      →    …
   463→def parse_key(src: str, pos: Pos) -> tuple[Pos, Key]:
   464→    pos, key_part = parse_key_part(src, pos)
      →    …
   481→def parse_key_part(src: str, pos: Pos) -> tuple[Pos, str]:
   482→    try:
      →    …
   497→def parse_one_line_basic_str(src: str, pos: Pos) -> tuple[Pos, str]:
   498→    pos += 1
      →    …
   502→def parse_array(
   503→    src: str, pos: Pos, parse_float: ParseFloat, nest_lvl: int
   504→) -> tuple[Pos, list[Any]]:
   505→    pos += 1
      →    …
   528→def parse_inline_table(
   529→    src: str, pos: Pos, parse_float: ParseFloat, nest_lvl: int
   530→) -> tuple[Pos, dict[str, Any]]:
   531→    pos += 1
      →    …
   564→def parse_basic_str_escape(
   565→    src: str, pos: Pos, *, multiline: bool = False
   566→) -> tuple[Pos, str]:
   567→    escape_id = src[pos : pos + 2]
      →    …
   595→def parse_basic_str_escape_multiline(src: str, pos: Pos) -> tuple[Pos, str]:
   596→    return parse_basic_str_escape(src, pos, multiline=True)
   599→def parse_hex_char(src: str, pos: Pos, hex_len: int) -> tuple[Pos, str]:
   600→    hex_str = src[pos : pos + hex_len]
      →    …
   612→def parse_literal_str(src: str, pos: Pos) -> tuple[Pos, str]:
   613→    pos += 1  # Skip starting apostrophe
      →    …
   621→def parse_multiline_str(src: str, pos: Pos, *, literal: bool) -> tuple[Pos, str]:
   622→    pos += 3
      →    …
   652→def parse_basic_str(src: str, pos: Pos, *, multiline: bool) -> tuple[Pos, str]:
   653→    if multiline:
      →    …
   684→def parse_value(
   685→    src: str, pos: Pos, parse_float: ParseFloat, nest_lvl: int
   686→) -> tuple[Pos, Any]:
   687→    if nest_lvl > MAX_INLINE_NESTING:
      →    …
   760→def is_unicode_scalar_value(codepoint: int) -> bool:
   761→    return (0 <= codepoint <= 55295) or (57344 <= codepoint <= 1114111)
   764→def make_safe_parse_float(parse_float: ParseFloat) -> ParseFloat:
   765→    """A decorator to make `parse_float` safe.
   766→
   767→    `parse_float` must not return dicts or lists, because these types
   768→    would be mixed with parsed TOML tables and arrays, thus confusing
   769→    the parser. The returned decorated callable raises `ValueError`
   770→    instead of returning illegal types.
   771→    """
   772→    # The default `float` callable never returns illegal types. Optimize it.
      →    …

_re.py
     7→from datetime import date, datetime, time, timedelta, timezone, tzinfo
     8→from functools import lru_cache
     9→import re
    11→TYPE_CHECKING = False
    13→    from typing import Any, Final
    15→    from ._types import ParseFloat
    17→_TIME_RE_STR: Final = r"""
    18→([01][0-9]|2[0-3])             # hours
    19→:([0-5][0-9])                  # minutes
    20→(?:
    21→    :([0-5][0-9])              # optional seconds
    22→    (?:\.([0-9]{1,6})[0-9]*)?  # optional fractions of a second
    23→)?
    24→"""
    26→RE_NUMBER: Final = re.compile(
    27→    r"""
    28→0
    29→(?:
    30→    x[0-9A-Fa-f](?:_?[0-9A-Fa-f])*   # hex
    31→    |
    32→    b[01](?:_?[01])*                 # bin
    33→    |
    34→    o[0-7](?:_?[0-7])*               # oct
    35→)
    36→|
    37→[+-]?(?:0|[1-9](?:_?[0-9])*)         # dec, integer part
    38→(?P<floatpart>
    39→    (?:\.[0-9](?:_?[0-9])*)?         # optional fractional part
    40→    (?:[eE][+-]?[0-9](?:_?[0-9])*)?  # optional exponent part
    41→)
    42→""",
    43→    flags=re.VERBOSE,
    44→)
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    47→    rf"""
    48→([0-9]{{4}})-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])  # date, e.g. 1988-10-27
    49→(?:
    50→    [Tt ]
    51→    {_TIME_RE_STR}
    52→    (?:([Zz])|([+-])([01][0-9]|2[0-3]):([0-5][0-9]))?  # optional time offset
    53→)?
    54→""",
    55→    flags=re.VERBOSE,
    56→)
    59→def match_to_datetime(match: re.Match[str]) -> datetime | date:
    60→    """Convert a `RE_DATETIME` match to `datetime.datetime` or `datetime.date`.
    61→
    62→    Raises ValueError if the match does not correspond to a valid date
    63→    or datetime.
    64→    """
    65→    (
      →    …
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
   104→            minutes=sign * int(minute_str),
   105→        )
   106→    )
   109→def match_to_localtime(match: re.Match[str]) -> time:
   110→    hour_str, minute_str, sec_str, micros_str = match.groups()
      →    …
   116→def match_to_number(match: re.Match[str], parse_float: ParseFloat) -> Any:
   117→    if match.group("floatpart"):
      →    …

_types.py
     5→from typing import Any, Callable, Tuple
