tests/snapshots/snapshots__budget_tomli_src_tomli_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (499 words)

__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     4→
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
_parser.py
    19→TYPE_CHECKING = False
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
    30→# https://mypyc.readthedocs.io/en/latest/differences_from_python.html#stack-overflows
    31→# Before mypyc's fix is in, recursion needs to be limited by this library.
    32→# Choosing `sys.getrecursionlimit()` as maximum inline table/array nesting
    33→# level, as it allows more nesting than pure Python, but still seems a far
    34→# lower number than where mypyc binaries crash.
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    52→    "abcdefghijklmnopqrstuvwxyz" "ABCDEFGHIJKLMNOPQRSTUVWXYZ" "0123456789" "-_"
    53→)
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    58→    {
    59→        "\\b": "\u0008",  # backspace
    60→        "\\t": "\u0009",  # tab
    61→        "\\n": "\u000a",  # linefeed
    62→        "\\f": "\u000c",  # form feed
    63→        "\\r": "\u000d",  # carriage return
    64→        "\\e": "\u001b",  # escape
    71→class DEPRECATED_DEFAULT:
    76→class TOMLDecodeError(ValueError):
    86→
    87→    def __init__(
    88→        self,
   220→class Flags:
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   278→class NestedDict:
   279→    def __init__(self) -> None:
   280→        # The parsed content of the TOML document
   281→        self.dict: dict[str, Any] = {}
   312→class Output:
   313→    def __init__(self) -> None:
   314→        self.data = NestedDict()
   315→        self.flags = Flags()
_re.py
    11→TYPE_CHECKING = False
    17→_TIME_RE_STR: Final = r"""
    18→([01][0-9]|2[0-3])             # hours
    19→:([0-5][0-9])                  # minutes
    20→(?:
    26→RE_NUMBER: Final = re.compile(
    27→    r"""
    28→0
    29→(?:
    30→    x[0-9A-Fa-f](?:_?[0-9A-Fa-f])*   # hex
    31→    |
    32→    b[01](?:_?[01])*                 # bin
    33→    |
    34→    o[0-7](?:_?[0-7])*               # oct
    35→)
    36→|
    37→[+-]?(?:0|[1-9](?:_?[0-9])*)         # dec, integer part
    38→(?P<floatpart>
    39→    (?:\.[0-9](?:_?[0-9])*)?         # optional fractional part
    40→    (?:[eE][+-]?[0-9](?:_?[0-9])*)?  # optional exponent part
    41→)
    42→""",
    43→    flags=re.VERBOSE,
    44→)
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    47→    rf"""
    48→([0-9]{{4}})-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])  # date, e.g. 1988-10-27
    49→(?:
    50→    [Tt ]
    51→    {_TIME_RE_STR}
    52→    (?:([Zz])|([+-])([01][0-9]|2[0-3]):([0-5][0-9]))?  # optional time offset
    53→)?
    54→""",
    55→    flags=re.VERBOSE,
    56→)
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
   104→            minutes=sign * int(minute_str),
   105→        )
   106→    )
